# Trace-Fractal

./: .flake8  .gitignore  README.md  __init__.py  cpu.py  devices.py  keypad.py  pyproject.toml
machine/: cpu.py  devices.py
trace8/: __init__.py  conf.py  cpu.py  utils.py
