[tool.poetry]
name = "Trace-Fractal"
version = "0.1.0"
description = "A CHIP-8 emulator written in Python."
authors = ["mooncell07 <mooncell07@users.noreply.github.com>>"]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
